feat: expose complete todo records to Orb (v0.6.311)
